--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
+  simple_heatmap_calendar: ^0.4.0
+  flutter_heatmap_calendar: ^1.0.5
+  contribution_heatmap: ^0.4.1
 
 dev_dependencies:
   flutter_test:
